# Malin-C-

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/editor/: Cursor.cpp  Cursor.h  SyntaxHighlighter.cpp  SyntaxHighlighter.h  TextBuffer.cpp  TextBuffer.h
